# MimiqNotebooks

./: README.md  strasbourg_quantum_routing.ipynb
Strasbourg_quantum_routing/strasbourg_markets_demo/: .gitignore  LICENSE  pyproject.toml
Strasbourg_quantum_routing/strasbourg_markets_demo/examples/: _title_image.md  fidelity_sweep.ipynb  qaoa_demo.ipynb  qaoa_server_side.ipynb  qubo_mappings.ipynb  strasbourg_module.ipynb  strasbourg_quantum_routing.ipynb  tsp_classical.ipynb  tsp_demo.py  vrp_classical.ipynb  vrp_demo.py
Strasbourg_quantum_routing/strasbourg_markets_demo/strasbourg_markets_demo/: __init__.py  basemap.py  cache.py  qaoa.py  qperfect_dark.mplstyle  qubo.py  strasbourg.py  theme.py  tsp.py  vrp.py
examples/: fidelity_sweep.ipynb  qaoa_demo.ipynb  qaoa_server_side.ipynb  qubo_mappings.ipynb  strasbourg_module.ipynb  tsp_classical.ipynb  vrp_classical.ipynb
strasbourg_markets_demo/: __init__.py  basemap.py  cache.py  qaoa.py  qubo.py  strasbourg.py  theme.py  tsp.py  vrp.py
