[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["strasbourg_markets_demo"]

[project]
name = "strasbourg-markets-demo"
version = "0.1.0"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "QPerfect" }]
dependencies = [
    "folium>=0.15",
    "geopy>=2.4.1",
    "ipython>=8",
    "ipywidgets>=8.1",
    "jupyterlab>=4.0",
    "matplotlib>=3.8",
    "mimiqcircuits>=0.21",
    "networkx>=3.2",
    "numpy>=2.0",
    "ortools>=9.15",
    "scipy>=1.12",
    "symengine>=0.14.1",
]
